--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
   "name": "test-library/telib",
-"description": "Testen met de beste!",
+  "description": "Testen met de beste!",
   "require": {
-    "php": ">=8.1",
-    "another-vendor/package": "1.0.0"
+    "php": ">=7.4",
+    "another-vendor/package": "1.*.*"
   }
 }
